# sonata-maker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sonata_from_motif.py
examples/: motif.ly  oriental_riff.ly
src/sonata_maker/: __init__.py  __main__.py  cli.py  config.py  errors.py  generate.py  lilypond.py  midi.py  motif.py  output.py  pipeline.py  prompts.py  render.py  tools.py
tests/: test_cli.py  test_config.py  test_lilypond.py  test_midi.py  test_motif.py  test_tools.py
