[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonata-maker"
version = "0.1.0"
description = "Generate piano sonata-form movements from LilyPond motifs using AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "mido>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sonata-maker = "sonata_maker.cli:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sonata_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
